Create Featured Speakers section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,32 @@
         </div>
         <button>Join CC Global Summit 2015</button>
       </div>
+      <div class="featuredSpeakers">
+        <div>
+          <h2>Featured Speakers</h2>
+          <div>line</div>
+        </div>
+        <div>
+          <div>
+            <img src="Art/speaker_01.png" alt="">
+            <div>
+              <h3>Yochai Benkler</h3>
+              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
+              <div>line</div>
+              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
+            </div>
+          </div>
+          <div>
+            <img src="Art/speaker_01.png" alt="">
+            <div>
+              <h3>Yochai Benkler</h3>
+              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
+              <div>line</div>
+              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 </body>
 </html>
