--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="content">
-      <div class="header">
+      <section class="header">
         <div class="logo"></div>
         <nav>
           <div class="mobilemenu">
@@ -22,8 +23,8 @@
             </ul>
           </div>
         </nav>
-      </div>
-      <div class="mainPage">
+      </section>
+      <section class="mainPage">
         <div>
           <h3>"Hello, Sharing world!"</h3>
         </div>
@@ -41,8 +42,8 @@
         <div>
           <h4>@ National Museum of Korea, Art Center Nabi and more</h4>
         </div>
-      </div>
-      <div class="mainProgram">
+      </section>
+      <section class="mainProgram">
         <div>
           <h2>Main Program</h2>
           <div>line</div>
@@ -73,8 +74,8 @@
           <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
         </div>
         <button>Join CC Global Summit 2015</button>
-      </div>
-      <div class="featuredSpeakers">
+      </section>
+      <section class="featuredSpeakers">
         <div>
           <h2>Featured Speakers</h2>
           <div>line</div>
@@ -99,7 +100,8 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </div>
+  <script src="scripts.js"></script>
 </body>
 </html>
