--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="content">
       <section class="header">
-        <div class="logo"></div>
+        <div class="logo"><a href="#mainPage">Logo</a></div>
         <nav>
           <div class="mobilemenu">
-            <img src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
-            <ul>
+            <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
+            <ul class="hide">
               <li>About</li>
               <li>Program</li>
               <li>Join</li>
@@ -31,44 +31,46 @@
         <div>
           <h1>CREATIVE COMMONS <br>GLOBAL SUMMIT <br>2015</h1>
         </div>
-        <div>
+        <div class="message">
           <p>A joyful celebration elieving in the value of openness ans sharing, creating a positive 
             change with people from over 80 countries is taking place in October, in Korea.
           </p>
         </div>
-        <div>
-          <h2>2015.10.15(THU) ~ 16(FRI)</h2>
-        </div>
-        <div>
-          <h4>@ National Museum of Korea, Art Center Nabi and more</h4>
+        <div class="dateLocation">
+          <div>
+            <h2>2015.10.15(THU) ~ 16(FRI)</h2>
+          </div>
+          <div>
+            <h4>@ National Museum of Korea, Art Center Nabi and more</h4>
+          </div>
         </div>
       </section>
       <section class="mainProgram">
-        <div>
+        <div class="mainProgram-header">
           <h2>Main Program</h2>
-          <div>line</div>
+          <div class="divline"></div>
         </div>
-        <div>
+        <div class="programList">
           <img src="Art/program_icon_01.png" alt="Lecture Icon">
           <h3>Lecture</h3>
           <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
         </div>
-        <div>
+        <div class="programList">
           <img src="Art/program_icon_02.png" alt="CC Exhibition Icon">
           <h3>CC Exhibition</h3>
           <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
         </div>
-        <div>
+        <div class="programList">
           <img src="Art/program_icon_03.png" alt="Forum Icon">
           <h3>Forum</h3>
           <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
         </div>
-        <div>
+        <div class="programList">
           <img src="Art/program_icon_04.png" alt="Workshop Icon">
           <h3>Workshop</h3>
           <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
         </div>
-        <div>
+        <div class="programList">
           <img src="Art/program_icon_05.png" alt="CC Ignite Icon">
           <h3>CC Ignite</h3>
           <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
@@ -78,28 +80,46 @@
       <section class="featuredSpeakers">
         <div>
           <h2>Featured Speakers</h2>
+          <div class="divline"></div>
+        </div>
+        <div>
+          <div class="speakers">
+            <img src="Art/speaker_01.png" alt="">
+            <div>
+              <h3>Yochai Benkler</h3>
+              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
+              <div>line</div>
+              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
+            </div>
+          </div>
+          <div>
+            <img src="Art/speaker_01.png" alt="">
+            <div>
+              <h3>Yochai Benkler</h3>
+              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
+              <div>line</div>
+              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
+            </div>
+          </div>
+        </div>
+        <button>MORE</button>
+      </section>
+      <section class="partner">
+        <div>
+          <h2>Partner</h2>
           <div>line</div>
         </div>
         <div>
-          <div>
-            <img src="Art/speaker_01.png" alt="">
-            <div>
-              <h3>Yochai Benkler</h3>
-              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
-              <div>line</div>
-              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
-            </div>
-          </div>
-          <div>
-            <img src="Art/speaker_01.png" alt="">
-            <div>
-              <h3>Yochai Benkler</h3>
-              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
-              <div>line</div>
-              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
-            </div>
-          </div>
+          <img src="Art/mozilla.png" alt="Mozilla Logo">
+          <img src="Art/google.png" alt="Google Logo">
+          <img src="Art/naver.png" alt="Naver Logo">
+          <img src="Art/kakao.png" alt="Kakao Logo">
+          <img src="Art/airbnb.png" alt="Airbnb Logo">
         </div>
+      </section>
+      <section class="footer">
+        <div>logo</div>
+        <div><p>2015 Creative Commons Korea. <br>Some Rights Reserved.</p></div>
       </section>
     </div>
   <script src="scripts.js"></script>
