Update index to facilitate styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="content">
       <section class="header">
-        <div class="logo"><a href="#mainPage">Logo</a></div>
+        <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
         <nav>
           <div class="mobilemenu">
             <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
@@ -24,7 +24,7 @@
           </div>
         </nav>
       </section>
-      <section class="mainPage">
+      <section class="mainPage" id="mainPage">
         <div>
           <h3>"Hello, Sharing world!"</h3>
         </div>
@@ -85,19 +85,19 @@
         <div>
           <div class="speakers">
             <img src="Art/speaker_01.png" alt="">
-            <div>
+            <div class="speakersInfo">
               <h3>Yochai Benkler</h3>
               <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
-              <div>line</div>
+              <div></div>
               <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
             </div>
           </div>
-          <div>
+          <div class="speakers">
             <img src="Art/speaker_01.png" alt="">
-            <div>
+            <div class="speakersInfo">
               <h3>Yochai Benkler</h3>
               <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
-              <div>line</div>
+              <div></div>
               <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
             </div>
           </div>
@@ -107,18 +107,18 @@
       <section class="partner">
         <div>
           <h2>Partner</h2>
-          <div>line</div>
+          <div class="divline"></div>
         </div>
-        <div>
-          <img src="Art/mozilla.png" alt="Mozilla Logo">
-          <img src="Art/google.png" alt="Google Logo">
-          <img src="Art/naver.png" alt="Naver Logo">
-          <img src="Art/kakao.png" alt="Kakao Logo">
-          <img src="Art/airbnb.png" alt="Airbnb Logo">
+        <div class="partners">
+          <a href="https://foundation.mozilla.org/en/"><img src="Art/mozilla.svg" alt="Mozilla Logo"></a>
+          <a href="https://www.google.com/"><img src="Art/google.png" alt="Google Logo"></a>
+          <a href="https://www.naver.com/"><img src="Art/naver.svg" alt="Naver Logo"></a>
+          <a href="https://www.kakaocorp.com/page/"><img src="Art/kakao.svg" alt="Kakao Logo"></a>
+          <a href="https://www.airbnb.com/"><img src="Art/airbnb.svg" alt="Airbnb Logo"></a>
         </div>
       </section>
       <section class="footer">
-        <div>logo</div>
+        <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
         <div><p>2015 Creative Commons Korea. <br>Some Rights Reserved.</p></div>
       </section>
     </div>
