Start working on about page

--- a/about.html
+++ b/about.html
@@ -5,15 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="about_styles.css">
 </head>
 <body>
-  <div>
+  <div class="content">
     <section class="header">
-      <div class="logo"></div>
+      <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
       <nav>
         <div class="mobilemenu">
-          <img src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
-          <ul>
+          <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
+          <ul class="hide">
             <li>About</li>
             <li>Program</li>
             <li>Join</li>
