Add sections to about.html

--- a/about.html
+++ b/about.html
@@ -24,6 +24,19 @@
         </div>
       </nav>
     </section>
+    <section>
+      <h3>"Hello, Sharing world!"</h3>
+      <h1>CREATIVE COMMONS GLOBAL SUMMIT 2015</h1>
+      <div class="message">
+        <p>
+          The Global Summit brings together the community of experts, academics, and activists who comprise the Creative 
+          Commons affiliate network in a different country every two years. This year, we hope to expand our invitation 
+          list including organizations and individuals
+        </p>
+      </div>
+      <p>Please contact us per Email for any further questions about CC Global Summit 2015!</p>
+      <a href="">ccsummit2015@cckorea.org</a>
+    </section>
     <section class="pastEvents">
       <div>
         <h2>See the past CC Global Summits</h2>
@@ -38,6 +51,23 @@
         <h3>2011</h3>
         <h4>CC Global Summit 2011 in Warsaw</h4>
       </button>
+    </section>
+    <section class="partner">
+      <div>
+        <h2>Partner</h2>
+        <div class="divline"></div>
+      </div>
+      <div class="partners">
+        <a href="https://foundation.mozilla.org/en/"><img src="Art/mozilla.svg" alt="Mozilla Logo"></a>
+        <a href="https://www.google.com/"><img src="Art/google.png" alt="Google Logo"></a>
+        <a href="https://www.naver.com/"><img src="Art/naver.svg" alt="Naver Logo"></a>
+        <a href="https://www.kakaocorp.com/page/"><img src="Art/kakao.svg" alt="Kakao Logo"></a>
+        <a href="https://www.airbnb.com/"><img src="Art/airbnb.svg" alt="Airbnb Logo"></a>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
+      <div><p>2015 Creative Commons Korea. <br>Some Rights Reserved.</p></div>
     </section>
   </div>
 </body>
