Move header inside mainPage

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <div class="content">
-      <section class="header">
-        <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
-        <nav>
-          <div class="mobilemenu">
-            <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
-            <ul class="hide">
-              <li>About</li>
-              <li>Program</li>
-              <li>Join</li>
-              <li>Sponsor</li>
-              <li>News</li>
-            </ul>
-          </div>
-        </nav>
-      </section>
       <section class="mainPage" id="mainPage">
+        <div class="header">
+          <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
+          <nav>
+            <div class="mobilemenu">
+              <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
+              <ul class="hide">
+                <li>About</li>
+                <li>Program</li>
+                <li>Join</li>
+                <li>Sponsor</li>
+                <li>News</li>
+              </ul>
+            </div>
+          </nav>
+        </div>
         <div>
           <h3>"Hello, Sharing world!"</h3>
         </div>
