--- a/about.html
+++ b/about.html
@@ -9,22 +9,22 @@
 </head>
 <body>
   <div class="content">
-    <section class="header">
-      <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
-      <nav>
-        <div class="mobilemenu">
-          <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
-          <ul class="hide">
-            <li>About</li>
-            <li>Program</li>
-            <li>Join</li>
-            <li>Sponsor</li>
-            <li>News</li>
-          </ul>
-        </div>
-      </nav>
-    </section>
-    <section>
+    <section class="aboutMain" id="aboutMain">
+      <div class="header">
+        <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
+        <nav>
+          <div class="mobilemenu">
+            <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
+            <ul class="hide">
+              <li>About</li>
+              <li>Program</li>
+              <li>Join</li>
+              <li>Sponsor</li>
+              <li>News</li>
+            </ul>
+          </div>
+        </nav>
+      </div>
       <h3>"Hello, Sharing world!"</h3>
       <h1>CREATIVE COMMONS GLOBAL SUMMIT 2015</h1>
       <div class="message">
@@ -34,13 +34,15 @@
           list including organizations and individuals
         </p>
       </div>
-      <p>Please contact us per Email for any further questions about CC Global Summit 2015!</p>
-      <a href="">ccsummit2015@cckorea.org</a>
+      <div class="contact">
+        <p>Please contact us per Email for any further questions about CC Global Summit 2015!</p>
+        <a href="">ccsummit2015@cckorea.org</a>
+      </div>
     </section>
     <section class="pastEvents">
       <div>
         <h2>See the past CC Global Summits</h2>
-        <div>line</div>
+        <div class="divline"></div>
         <p>Take a look at the last two CC Global Summits which took place in Buenos Aires and in Warsaw.</p>
       </div>
       <button>
