Mobile version ready

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <div class="content">
     <section class="aboutMain" id="aboutMain">
       <div class="header">
-        <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
+        <div class="logo"><a href="index.html"><img src="art/logo_placeholder.svg" alt=""></a></div>
         <nav>
           <div class="mobilemenu">
             <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
@@ -68,7 +68,7 @@
       </div>
     </section>
     <section class="footer">
-      <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
+      <div class="logo"><a href="index.html"><img src="art/logo_placeholder.svg" alt=""></a></div>
       <div><p>2015 Creative Commons Korea. <br>Some Rights Reserved.</p></div>
     </section>
   </div>
