Add styling to the main section desktop

--- a/index.html
+++ b/index.html
@@ -16,32 +16,34 @@
             <div class="mobilemenu">
               <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
               <ul class="hide">
-                <li>About</li>
-                <li>Program</li>
-                <li>Join</li>
-                <li>Sponsor</li>
-                <li>News</li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#">Program</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Sponsor</a></li>
+                <li><a href="#">News</a></li>
               </ul>
             </div>
           </nav>
         </div>
-        <div>
-          <h3>"Hello, Sharing world!"</h3>
-        </div>
-        <div>
-          <h1>CREATIVE COMMONS <br>GLOBAL SUMMIT <br>2015</h1>
-        </div>
-        <div class="message">
-          <p>A joyful celebration elieving in the value of openness ans sharing, creating a positive 
-            change with people from over 80 countries is taking place in October, in Korea.
-          </p>
-        </div>
-        <div class="dateLocation">
+        <div class="mainPage-content">
           <div>
-            <h2>2015.10.15(THU) ~ 16(FRI)</h2>
+            <h3>"Hello, Sharing world!"</h3>
           </div>
           <div>
-            <h4>@ National Museum of Korea, Art Center Nabi and more</h4>
+            <h1>CREATIVE COMMONS <br>GLOBAL SUMMIT <br>2015</h1>
+          </div>
+          <div class="message">
+            <p>A joyful celebration elieving in the value of openness ans sharing, creating a positive 
+              change with people from over 80 countries is taking place in October, in Korea.
+            </p>
+          </div>
+          <div class="dateLocation">
+            <div>
+              <h2>2015.10.15(THU) ~ 16(FRI)</h2>
+            </div>
+            <div>
+              <h4>@ National Museum of Korea, Art Center Nabi and more</h4>
+            </div>
           </div>
         </div>
       </section>
