Add more speakers

--- a/index.html
+++ b/index.html
@@ -52,30 +52,32 @@
           <h2>Main Program</h2>
           <div class="divline"></div>
         </div>
-        <div class="programList">
-          <img src="Art/program_icon_01.png" alt="Lecture Icon">
-          <h3>Lecture</h3>
-          <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
-        </div>
-        <div class="programList">
-          <img src="Art/program_icon_02.png" alt="CC Exhibition Icon">
-          <h3>CC Exhibition</h3>
-          <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
-        </div>
-        <div class="programList">
-          <img src="Art/program_icon_03.png" alt="Forum Icon">
-          <h3>Forum</h3>
-          <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
-        </div>
-        <div class="programList">
-          <img src="Art/program_icon_04.png" alt="Workshop Icon">
-          <h3>Workshop</h3>
-          <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
-        </div>
-        <div class="programList">
-          <img src="Art/program_icon_05.png" alt="CC Ignite Icon">
-          <h3>CC Ignite</h3>
-          <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
+        <div class="programList-container">
+          <div class="programList">
+            <img src="Art/program_icon_01.png" alt="Lecture Icon">
+            <h3>Lecture</h3>
+            <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
+          </div>
+          <div class="programList">
+            <img src="Art/program_icon_02.png" alt="CC Exhibition Icon">
+            <h3>CC Exhibition</h3>
+            <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
+          </div>
+          <div class="programList">
+            <img src="Art/program_icon_03.png" alt="Forum Icon">
+            <h3>Forum</h3>
+            <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
+          </div>
+          <div class="programList">
+            <img src="Art/program_icon_04.png" alt="Workshop Icon">
+            <h3>Workshop</h3>
+            <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
+          </div>
+          <div class="programList">
+            <img src="Art/program_icon_05.png" alt="CC Ignite Icon">
+            <h3>CC Ignite</h3>
+            <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
+          </div>
         </div>
         <button>Join CC Global Summit 2015</button>
       </section>
@@ -84,7 +86,7 @@
           <h2>Featured Speakers</h2>
           <div class="divline"></div>
         </div>
-        <div>
+        <div class="speakers-container">
           <div class="speakers">
             <img src="Art/speaker_01.png" alt="">
             <div class="speakersInfo">
@@ -95,6 +97,42 @@
             </div>
           </div>
           <div class="speakers">
+            <img src="Art/speaker_01.png" alt="">
+            <div class="speakersInfo">
+              <h3>Yochai Benkler</h3>
+              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
+              <div></div>
+              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
+            </div>
+          </div>
+          <div class="speakers hideSpeakers">
+            <img src="Art/speaker_01.png" alt="">
+            <div class="speakersInfo">
+              <h3>Yochai Benkler</h3>
+              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
+              <div></div>
+              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
+            </div>
+          </div>
+          <div class="speakers hideSpeakers">
+            <img src="Art/speaker_01.png" alt="">
+            <div class="speakersInfo">
+              <h3>Yochai Benkler</h3>
+              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
+              <div></div>
+              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
+            </div>
+          </div>
+          <div class="speakers hideSpeakers">
+            <img src="Art/speaker_01.png" alt="">
+            <div class="speakersInfo">
+              <h3>Yochai Benkler</h3>
+              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
+              <div></div>
+              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
+            </div>
+          </div>
+          <div class="speakers hideSpeakers">
             <img src="Art/speaker_01.png" alt="">
             <div class="speakersInfo">
               <h3>Yochai Benkler</h3>
