Fix about.html to help with styling

--- a/about.html
+++ b/about.html
@@ -16,11 +16,11 @@
           <div class="mobilemenu">
             <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
             <ul class="hide">
-              <li>About</li>
-              <li>Program</li>
-              <li>Join</li>
-              <li>Sponsor</li>
-              <li>News</li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="#">Program</a></li>
+              <li><a href="#">Join</a></li>
+              <li><a href="#">Sponsor</a></li>
+              <li><a href="#">News</a></li>
             </ul>
           </div>
         </nav>
@@ -45,14 +45,16 @@
         <div class="divline"></div>
         <p>Take a look at the last two CC Global Summits which took place in Buenos Aires and in Warsaw.</p>
       </div>
-      <button>
-        <h3>2013</h3>
-        <h4>CC Global Summit 2013 in Buenos Aires</h4>
-      </button>
-      <button>
-        <h3>2011</h3>
-        <h4>CC Global Summit 2011 in Warsaw</h4>
-      </button>
+      <div class="buttons-container">
+        <button>
+          <h3>2013</h3>
+          <h4>CC Global Summit 2013 in Buenos Aires</h4>
+        </button>
+        <button>
+          <h3>2011</h3>
+          <h4>CC Global Summit 2011 in Warsaw</h4>
+        </button>
+      </div>
     </section>
     <section class="partner">
       <div>
