--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="body">
+<body class="body" onload="loadSpeakers();">
     <div class="content">
       <section class="mainPage" id="mainPage">
         <div class="header">
@@ -90,67 +90,6 @@
         <button>Join CC Global Summit 2015</button>
       </section>
       <section class="featuredSpeakers">
-        <div>
-          <h2>Featured Speakers</h2>
-          <div class="divline"></div>
-        </div>
-        <div class="speakers-container">
-          <div class="speakers">
-            <img src="Art/speaker_01.png" alt="">
-            <div class="speakersInfo">
-              <h3>Yochai Benkler</h3>
-              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
-              <div></div>
-              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
-            </div>
-          </div>
-          <div class="speakers">
-            <img src="Art/speaker_01.png" alt="">
-            <div class="speakersInfo">
-              <h3>Yochai Benkler</h3>
-              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
-              <div></div>
-              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
-            </div>
-          </div>
-          <div class="speakers hideSpeakers">
-            <img src="Art/speaker_01.png" alt="">
-            <div class="speakersInfo">
-              <h3>Yochai Benkler</h3>
-              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
-              <div></div>
-              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
-            </div>
-          </div>
-          <div class="speakers hideSpeakers">
-            <img src="Art/speaker_01.png" alt="">
-            <div class="speakersInfo">
-              <h3>Yochai Benkler</h3>
-              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
-              <div></div>
-              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
-            </div>
-          </div>
-          <div class="speakers hideSpeakers">
-            <img src="Art/speaker_01.png" alt="">
-            <div class="speakersInfo">
-              <h3>Yochai Benkler</h3>
-              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
-              <div></div>
-              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
-            </div>
-          </div>
-          <div class="speakers hideSpeakers">
-            <img src="Art/speaker_01.png" alt="">
-            <div class="speakersInfo">
-              <h3>Yochai Benkler</h3>
-              <h4>Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</h4>
-              <div></div>
-              <p>Benkler studies commons-based peer production, and published his seminal book "The Wealth of Networks" in 2006</p>
-            </div>
-          </div>
-        </div>
-        <button>MORE</button>
       </section>
       <section class="partner">
         <div>
