--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1>CREATIVE COMMONS <br>GLOBAL SUMMIT <br>2015</h1>
           </div>
           <div class="message">
-            <p>A joyful celebration elieving in the value of openness ans sharing, creating a positive 
+            <p>A joyful celebration believing in the value of openness and sharing, creating a positive 
               change with people from over 80 countries is taking place in October, in Korea.
             </p>
           </div>
@@ -69,22 +69,22 @@
           <div class="programList">
             <img src="Art/program_icon_02.png" alt="CC Exhibition Icon">
             <h3>CC Exhibition</h3>
-            <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
+            <p>Appreciate various creations applying CC license of artists, organized from Art Center Nabi.</p>
           </div>
           <div class="programList">
             <img src="Art/program_icon_03.png" alt="Forum Icon">
             <h3>Forum</h3>
-            <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
+            <p>Have the time to share your thoughts and opinions with experts for each topic.</p>
           </div>
           <div class="programList">
             <img src="Art/program_icon_04.png" alt="Workshop Icon">
             <h3>Workshop</h3>
-            <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
+            <p>Try creating your own work using open source license rather than just watching at it.</p>
           </div>
           <div class="programList">
             <img src="Art/program_icon_05.png" alt="CC Ignite Icon">
             <h3>CC Ignite</h3>
-            <p>Listen to the speakers from various countries about the messeges of sharing and opening.</p>
+            <p>Get opportunities to network with CC affiliates around the world, also after the summit.</p>
           </div>
         </div>
         <button>Join CC Global Summit 2015</button>
