--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <div class="content">
     <section class="aboutMain" id="aboutMain">
       <div class="header">
-        <div class="logo"><a href="index.html"><img src="art/logo_placeholder.svg" alt=""></a></div>
+        <div class="logo"><a href="index.html"><img src="art/logo.png" alt=""></a></div>
         <nav>  
           <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
           <ul class="navigation">
@@ -34,33 +34,33 @@
         </nav>
       </div>
       <h3>"Hello, Sharing world!"</h3>
-      <h1>CREATIVE COMMONS GLOBAL SUMMIT 2015</h1>
+      <h1>MOTIVATION: EVIDENCE TO PROMOTE LEARNING 2022</h1>
       <div class="message">
         <p>
-          The Global Summit brings together the community of experts, academics, and activists who comprise the Creative 
-          Commons affiliate network in a different country every two years. This year, we hope to expand our invitation 
-          list including organizations and individuals
+          What are the processes and factors that motivate students to learn? To reflect on this question, 
+          we brought together scientists, managers, teachers and inspiring people at the 
+          International Seminar - Motivation: evidence to promote learning.
         </p>
       </div>
       <div class="contact">
-        <p>Please contact us per Email for any further questions about CC Global Summit 2015!</p>
-        <a href="">ccsummit2015@cckorea.org</a>
+        <p>Please contact us per Email for any further questions about IAS Motivation 2022!</p>
+        <a href="mailto:ias@ias.org.br">ias@ias.org.br</a>
       </div>
     </section>
     <section class="pastEvents">
       <div>
-        <h2>See the past CC Global Summits</h2>
+        <h2>See the past IAS Motivations</h2>
         <div class="divline"></div>
-        <p>Take a look at the last two CC Global Summits which took place in Buenos Aires and in Warsaw.</p>
+        <p>Take a look at the last two IAS Motivations which took place in Buenos Aires and in Warsaw.</p>
       </div>
       <div class="buttons-container">
-        <button>
-          <h3>2013</h3>
-          <h4>CC Global Summit 2013 in Buenos Aires</h4>
+        <button class="button2021">
+          <h3>2021</h3>
+          <h4>IAS Motivation 2021 in Buenos Aires</h4>
         </button>
-        <button>
-          <h3>2011</h3>
-          <h4>CC Global Summit 2011 in Warsaw</h4>
+        <button class="button2020">
+          <h3>2020</h3>
+          <h4>IAS Motivation 2020 in Warsaw</h4>
         </button>
       </div>
     </section>
@@ -78,8 +78,8 @@
       </div>
     </section>
     <section class="footer">
-      <div class="logo"><a href="index.html"><img src="art/logo_placeholder.svg" alt=""></a></div>
-      <div><p>2015 Creative Commons Korea. <br>Some Rights Reserved.</p></div>
+      <div class="logo"><a href="index.html"><img src="art/logo.png" alt=""></a></div>
+      <div><p>2022 Instituto Ayrton Senna. <br>Some Rights Reserved.</p></div>
     </section>
   </div>
   <script src="scripts.js"></script>
