--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="content">
       <section class="mainPage" id="mainPage">
         <div class="header">
-          <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
+          <div class="logo"><a href="#mainPage"><img src="art/logo.png" alt=""></a></div>
           <nav>  
             <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
             <ul class="navigation">
@@ -38,19 +38,21 @@
             <h3>"Hello, Sharing world!"</h3>
           </div>
           <div>
-            <h1>CREATIVE COMMONS <br>GLOBAL SUMMIT <br>2015</h1>
+            <h1>MOTIVATION: <br>EVIDENCE TO PROMOTE LEARNING <br>2022</h1>
           </div>
           <div class="message">
-            <p>A joyful celebration believing in the value of openness and sharing, creating a positive 
-              change with people from over 80 countries is taking place in October, in Korea.
+            <p>
+              What are the processes and factors that motivate students to learn? To reflect on this question, 
+              we brought together scientists, managers, teachers and inspiring people at the 
+              International Seminar - Motivation: evidence to promote learning. 
             </p>
           </div>
           <div class="dateLocation">
             <div>
-              <h2>2015.10.15(THU) ~ 16(FRI)</h2>
+              <h2>2022.06.16(THU) ~ 18(SAT)</h2>
             </div>
             <div>
-              <h4>@ National Museum of Korea, Art Center Nabi and more</h4>
+              <h4>@ Instituto Ayrton Senna, São Paulo - SP</h4>
             </div>
           </div>
         </div>
@@ -87,7 +89,7 @@
             <p>Get opportunities to network with CC affiliates around the world, also after the summit.</p>
           </div>
         </div>
-        <button>Join CC Global Summit 2015</button>
+        <button>Join IAS Motivation 2022</button>
       </section>
       <section class="featuredSpeakers">
       </section>
@@ -105,8 +107,8 @@
         </div>
       </section>
       <section class="footer">
-        <div class="logo"><a href="#mainPage"><img src="art/logo_placeholder.svg" alt=""></a></div>
-        <div><p>2015 Creative Commons Korea. <br>Some Rights Reserved.</p></div>
+        <div class="logo"><a href="#mainPage"><img src="art/logo.png" alt=""></a></div>
+        <div><p>2022 Instituto Ayrton Senna. <br>Some Rights Reserved.</p></div>
       </section>
     </div>
   <script src="scripts.js"></script>
