--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
           <div class="programList">
             <img src="Art/program_icon_02.png" alt="CC Exhibition Icon">
-            <h3>CC Exhibition</h3>
+            <h3>Exhibition</h3>
             <p>Appreciate various creations applying CC license of artists, organized from Art Center Nabi.</p>
           </div>
           <div class="programList">
@@ -85,7 +85,7 @@
           </div>
           <div class="programList">
             <img src="Art/program_icon_05.png" alt="CC Ignite Icon">
-            <h3>CC Ignite</h3>
+            <h3>Ignite</h3>
             <p>Get opportunities to network with CC affiliates around the world, also after the summit.</p>
           </div>
         </div>
