--- a/about.html
+++ b/about.html
@@ -55,12 +55,12 @@
       </div>
       <div class="buttons-container">
         <button class="button2021">
-          <h3>2021</h3>
-          <h4>IAS Motivation 2021 in Buenos Aires</h4>
+          <p>2021</p>
+          <p>IAS Motivation 2021 in Buenos Aires</p>
         </button>
         <button class="button2020">
-          <h3>2020</h3>
-          <h4>IAS Motivation 2020 in Warsaw</h4>
+          <p>2020</p>
+          <p>IAS Motivation 2020 in Warsaw</p>
         </button>
       </div>
     </section>
