--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <li><a href="#">News</a></li>
           </ul>
           <div class="mobilemenu hide">
-            <button class="closeMenu">&times;</button>
+            <button class="closeMenu" type="button">&times;</button>
             <ul class="mobilemenuOptions">
               <li><a href="about.html">About</a></li>
               <li><a href="#">Program</a></li>
@@ -54,13 +54,13 @@
         <p>Take a look at the last two IAS Motivations which took place in Buenos Aires and in Warsaw.</p>
       </div>
       <div class="buttons-container">
-        <button class="button2021">
-          <p>2021</p>
-          <p>IAS Motivation 2021 in Buenos Aires</p>
+        <button class="button2021" type="button">
+          2021<br><br>
+          IAS Motivation 2021 in Buenos Aires
         </button>
-        <button class="button2020">
-          <p>2020</p>
-          <p>IAS Motivation 2020 in Warsaw</p>
+        <button class="button2020" type="button">
+          2020<br><br>
+          IAS Motivation 2020 in Warsaw
         </button>
       </div>
     </section>
@@ -79,7 +79,7 @@
     </section>
     <section class="footer">
       <div class="logo"><a href="index.html"><img src="art/logo.png" alt=""></a></div>
-      <div><p>2022 Instituto Ayrton Senna. <br>Some Rights Reserved.</p></div>
+      <div><h4>2022 Instituto Ayrton Senna. <br>Some Rights Reserved.</h4></div>
     </section>
   </div>
   <script src="scripts.js"></script>
