--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <li><a href="#">News</a></li>
             </ul>
             <div class="mobilemenu hide">
-              <button class="closeMenu">&times;</button>
+              <button class="closeMenu" type="button">&times;</button>
               <ul class="mobilemenuOptions">
                 <li><a href="about.html">About</a></li>
                 <li><a href="#">Program</a></li>
@@ -89,7 +89,7 @@
             <p>Get opportunities to network with CC affiliates around the world, also after the summit.</p>
           </div>
         </div>
-        <button>Join IAS Motivation 2022</button>
+        <button type="button">Join IAS Motivation 2022</button>
       </section>
       <section class="featuredSpeakers">
       </section>
@@ -108,7 +108,7 @@
       </section>
       <section class="footer">
         <div class="logo"><a href="#mainPage"><img src="art/logo.png" alt=""></a></div>
-        <div><p>2022 Instituto Ayrton Senna. <br>Some Rights Reserved.</p></div>
+        <div><h4>2022 Instituto Ayrton Senna. <br>Some Rights Reserved.</h4></div>
       </section>
     </div>
   <script src="scripts.js"></script>
