--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <div class="content">
     <section class="aboutMain" id="aboutMain">
       <div class="header">
-        <div class="logo"><a href="index.html"><img src="art/logo.png" alt=""></a></div>
+        <div class="logo"><a href="index.html"><img src="Art/logo.png" alt=""></a></div>
         <nav>  
           <img class="hamburguerIcon" src="Art/mobile_menu.png" alt="Mobile menu hamburguer Icon">
           <ul class="navigation">
@@ -78,7 +78,7 @@
       </div>
     </section>
     <section class="footer">
-      <div class="logo"><a href="index.html"><img src="art/logo.png" alt=""></a></div>
+      <div class="logo"><a href="index.html"><img src="Art/logo.png" alt=""></a></div>
       <div><h4>2022 Instituto Ayrton Senna. <br>Some Rights Reserved.</h4></div>
     </section>
   </div>
